Fixed overlapping and header bug

--- a/src/assets/styles/about.css
+++ b/src/assets/styles/about.css
@@ -40,7 +40,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 10vh;
+  padding-top: 70vh;
 }
 
   .p-5 {
